;;
;; Atoum package
;;
[metadata]
name = atoum
version = 0.3.0-pre.6
description = A Django application to manage shopping lists and stock of consumables
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/atoum
project_urls =
    Source Code = https://github.com/sveetch/atoum
    Issue Tracker = https://github.com/sveetch/atoum/issues
    Changelog = https://atoum.readthedocs.io/en/latest/history.html
    Documentation = https://atoum.readthedocs.io/
license = MIT
keywords = Python,Django
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    Django>=4.2,<5.1
    django-smart-media>=0.3.0
    django-autocomplete-light>=3.11.0
    django-import-export[cli,csv,json,xlsx,yaml]>=3.4.0
    whoosh-reloaded>=2.7.5
    django-haystack>=3.3.0
    django-crispy-forms>=2.3
    crispy-bootstrap5>=2024.10
packages = find:
zip_safe = True

[options.extras_require]
breadcrumbs =
    django-view-breadcrumbs>=2.5.0
sandbox =
    diskette>=0.3.6
    django-debug-toolbar>=4.4.0
    py-css-styleguide>=1.2.0
dev =
    pytest>=7.0.0
    pytest-django>=4.0.0
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.7.0
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{39,311}-django{42,50}

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1

commands =
    pip install -e .[dev]
    pytest tests
